# learning_C

./: CMakeLists.txt  README.md  assignment1.c  assignment1.h  assignment2.c  assignment2.h  assignment3.c  assignment3.h  main.c  math.h  usingScan.h
